Theme is now 1.9 ready

--- a/static/about.html
+++ b/static/about.html
@@ -24,16 +24,22 @@
   </nav>
 
   <header>
-    <img
-      src="/.static/logo.png"
-      alt="logo" />
+<div id="logoBox" class="title">
+      <img src="/.static/logo.png" alt="logo">
+    </div>
   </header>
 
   <div id="staticPageWrapper">
     <fieldset id="staticPageFieldset">
       <legend>About</legend>
-      <p class="title">Title goes here</p>
-      <p>Text goes here.</p>
+   <p>Mewch (<a href="http://mewch.net" target="_blank" rel="nofollow" class="external-link">mewch.net</a>) or ChanPink is an English speaking realtime imageboard. Originally created for students on college campuses, this site can be used by anybody.</p>
+   <h2>History</h2>
+   <p>Mewch was made in 2017 by Mega Milk for the purpose of creating a social imageboard. The admin later changed the main board /campus/ into a “Random” type board. The site was posted on <a href="http://knowyourmeme.com/memes/sites/4chan" class="internal-link">4chan’s</a> /soc/ board many times until the site name became a registered banned url.<br>
+   </p>
+   <h2>Features</h2>
+   <p>Mewch uses Lynxchan similar to <a href="http://endchan.xyz" target="_blank" rel="nofollow" class="external-link">endchan</a>.</p>
+   <h2>Who is the girl on the homepage?</h2>
+   <p><a href="https://instagram.com/lywi.gr/">Kelly</a> a popular Brazilian instagrammer.</p>
     </fieldset>
   </div>
 </body>
