--- a/static/contact.html
+++ b/static/contact.html
@@ -24,15 +24,18 @@
   </nav>
 
   <header>
-    <img
-      src="/.static/logo.png"
-      alt="logo" />
+<div id="logoBox" class="title">
+      <img src="/.static/logo.png" alt="logo">
+    </div>
   </header>
 
   <div id="staticPageWrapper">
     <fieldset id="staticPageFieldset">
       <legend>Contact</legend>
-      <p>Your contact</p>
+	<p>We follow U.S. law and make a point of removing anything deemed illegal. If we have missed something please report it immediately</p>
+	<p>For immediate concerns or abuse contact a global staff:<br/> Mega Milk - Website Owner (mega@mewch.ru)</br>Deysu - Website Administrator/Operator (deysu@mewch.ru)</p>
+   <h2>I've got a DMCA takedown request that I can prove ownership of. What can I do? </h2>
+   <p>You can use the Report boxes and submit a request. You NEED to provide proof of ownership of some sort to prove it's a valid DMCA case. A DMCA Case ID is also sufficient. I usually check daily this website for new reports and ban the image globally, deleting the file forever and stopping it from being downloaded in the future. If within a week I have not taken down a reported post, please e-mail me (details on the contact page). Do note that if it's the same image being reposted, you can report it just once and I'll globally ban and remove it. </p>
     </fieldset>
   </div>
 </body>
