--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -24,17 +24,18 @@
   </nav>
 
   <header>
-    <img
-      src="/.static/logo.png"
-      alt="logo" />
+<div id="logoBox" class="title">
+      <img src="/.static/logo.png" alt="logo">
+    </div>
   </header>
 
   <div id="staticPageWrapper">
     <fieldset id="staticPageFieldset">
       <legend>Global Rules</legend>
-      <p>Title goes here</p>
       <ul id="golbalRulesUl">
-        <li>Insert rules here.</li>
+	<li>Nothing illegal in the U.S.</li>
+	<li>Please read board specific rules.</li>
+	<li>No sexualized posting of children, no admission of crimes involving children, no expressing intent to harm children. We follow the DOST test to remove illegal content from our site.</li>
       </ul>
     </fieldset>
   </div>
