--- a/static/links.html
+++ b/static/links.html
@@ -24,21 +24,20 @@
   </nav>
 
   <header>
-    <img
-      src="/.static/logo.png"
-      alt="logo" />
+<div id="logoBox" class="title">
+      <img src="/.static/logo.png" alt="logo">
+    </div>
   </header>
 
   <div id="staticPageWrapper">
     <fieldset id="staticPageFieldset">
       <legend>Links</legend>
-      <p class="title">Here are some links to other sites that you may
-        enjoy.</p>
       <ul>
-        <li><a href="https://gitgud.io/LynxChan/PenumbraLynx">Penumbra
-            Lynx</a>, the repository for this front-end.</li>
-        <li><a href="https://gitgud.io/LynxChan">LynxChan</a>, the
-          repository for LynxChan.</li>
+        <li><a href="https://radio.mewch.net/">Mewch Radio</a>, Listen to some tunes as you browse our site.</li>
+        <li><a href="ftp://mewch.ru">Mewch FTP server</a>, Mewch's ftp server, read-only.</li>
+        <li><a href="http://qjlf6jbb5ctcbsij.onion">Hidden Service</a>, Access to mewch via Tor</li>
+        <li><a href="https://www.youtube.com/channel/UC1itIVWGczAojcwYte3lvuA/">Mewch Livestreams</a>, Here is an archive of site streams and information regarding the mewch community.</li>
+	<li><a href="https://discord.gg/BPPssSx">Discord</a>, the official discord of Mewch.</li>
       </ul>
 
     </fieldset>
