--- a/static/moderation.html
+++ b/static/moderation.html
@@ -25,9 +25,9 @@
   </nav>
 
   <header>
-    <img
-      src="/.static/logo.png"
-      alt="logo" />
+<div id="logoBox" class="title">
+      <img src="/.static/logo.png" alt="logo">
+    </div>
   </header>
 
   <div id="staticPageWrapper">
