--- a/static/posting.html
+++ b/static/posting.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1.0">
 <link
   href="/.static/css/global.css"
   type="text/css"
@@ -14,13 +16,17 @@
   <nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
-        id="navLinkHome">home</a> <span>/</span> <a
+        id="navLinkHome"
+        class="coloredIcon">home</a> <span>/</span> <a
         href="/boards.js"
-        id="navBoardList">boards</a> <span>/</span> <a
+        id="navBoardList"
+        class="coloredIcon">boards</a> <span>/</span> <a
         href="/overboard"
-        id="navOverboard">overboard</a> <span>/</span> <a
+        id="navOverboard"
+        class="coloredIcon">overboard</a> <span>/</span> <a
         href="/.static/posting.html"
-        id="navPosting">help</a> <span>]</span>
+        id="navPosting"
+        class="coloredIcon">help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
