Updated about page

--- a/static/about.html
+++ b/static/about.html
@@ -40,9 +40,8 @@
   <div id="staticPageWrapper">
     <fieldset id="staticPageFieldset">
       <legend>About</legend>
-   <p>Mewch (<a href="http://mewch.net" target="_blank" rel="nofollow" class="external-link">mewch.net</a>) or ChanPink is an English speaking realtime imageboard. Originally created for students on college campuses, this site can be used by anybody.</p>
    <h2>History</h2>
-   <p>Mewch was made in 2017 by Mega Milk for the purpose of creating a social imageboard. The admin later changed the main board /campus/ into a “Random” type board. The site was posted on <a href="http://knowyourmeme.com/memes/sites/4chan" class="internal-link">4chan’s</a> /soc/ board many times until the site name became a registered banned url.<br>
+   <p>Mewch or ChanPink is an English speaking realtime imageboard. Originally created for students on college campuses, this site is used by many. Mewch was made on August 9th 2017. We offer board creation for our users as well as a Radio server, Public FTP and a great amount of support and user interaction.<br>
    </p>
    <h2>Features</h2>
    <p>Mewch uses Lynxchan similar to <a href="http://endchan.xyz" target="_blank" rel="nofollow" class="external-link">endchan</a>.</p>
