Fixed broken link

--- a/static/links.html
+++ b/static/links.html
@@ -41,7 +41,7 @@
       <ul>
         <li><a href="https://radio.mewch.net/">Mewch Radio</a>, Listen to some tunes as you browse our site.</li>
         <li><a href="ftp://mewch.ru">Mewch FTP server</a>, Mewch's ftp server, read-only.</li>
-        <li><a href="http://qjlf6jbb5ctcbsij.onion">Hidden Service</a>, Access to mewch via Tor</li>
+	<li><a href="http://mewchqgmqfe6zhnu.onion/">Hidden Service</a>, Access to mewch via Tor</li>
         <li><a href="https://www.youtube.com/channel/UC1itIVWGczAojcwYte3lvuA/">Mewch Livestreams</a>, Here is an archive of site streams and information regarding the mewch community.</li>
 	<li><a href="https://discord.gg/BPPssSx">Discord</a>, the official discord of Mewch.</li>
       </ul>
