--- a/static/moderation.html
+++ b/static/moderation.html
@@ -16,17 +16,19 @@
   <nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
-        id="navLinkHome"
-        class="coloredIcon">home</a> <span>/</span> <a
+        id="navLinkHome">home</a> <span>/</span> <a
         href="/boards.js"
-        id="navBoardList"
-        class="coloredIcon">boards</a> <span>/</span> <a
+        id="navBoardList">boards</a> <span>/</span> <a
         href="/overboard"
-        id="navOverboard"
-        class="coloredIcon">overboard</a> <span>/</span> <a
+        id="navOverboard">overboard</a> <span>/</span> <a
+        href="/.static/donate.html"
+        class="coloredIcon"
+        id="navDonate">donate</a> <span>/</span> <a
+        href="http://radio.mewch.net"
+        class="coloredIcon"
+        id="navRadio">radio</a> <span>/</span> <a
         href="/.static/posting.html"
-        id="navPosting"
-        class="coloredIcon">help</a> <span>]</span>
+        id="navPosting">help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
