--- a/static/donate.html
+++ b/static/donate.html
@@ -47,6 +47,7 @@
       	<p>Ways to donate:</p>
 	<li><a href="https://paypal.me/mewch">Paypal</a></li>
 	<li><a href="https://www.redbubble.com/people/mewch-net">Mewch Merch</a></li>
+	<li>or via Bitcoin: <b>1KWnGhFDt2KxosdNoDbWr7eVzT19YgVYUf</b></li>
       </ul>
   <p>It costs mewch <b>$222</b> a year to run our Las Vegas servers, and ~<b>$30</b> for domain name renewals.</p>
   <p>How much we've raised for this year's costs:</p>
