minor information fixes

--- a/static/about.html
+++ b/static/about.html
@@ -43,7 +43,7 @@
     <fieldset id="staticPageFieldset">
       <legend>About</legend>
    <h2>History</h2>
-   <p>Mewch or ChanPink is an English speaking realtime imageboard. Originally created for students on college campuses, this site is used by many. Mewch was made on August 9th 2017. We offer board creation for our users as well as a Radio server, Public FTP and a great amount of support and user interaction.<br>
+   <p>Mewch or ChanPink is an English speaking realtime imageboard. Originally created for students on college campuses, this site is used by many. Mewch was made on August 9th 2017. We offer board creation for our users as well as a Radio server, Public File Server and a great amount of support and user interaction.<br>
    </p>
    <h2>Features</h2>
    <p>Mewch uses Lynxchan similar to <a href="http://endchan.xyz" target="_blank" rel="nofollow" class="external-link">endchan</a>.</p>
