--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -46,6 +46,7 @@
 	<li>Nothing illegal in the U.S.</li>
 	<li>Please read board specific rules.</li>
 	<li>Don't post any pictures of children, <u>period.</u> <small>(Discussion is allowed but expressing any sort of crime is forbidden.)</small></li>
+	<li>No flooding</li>
       </ul>
   <p>Boards on mewch.net <u>may</u> be removed by the mewch.net staff for a variety of reasons. The following types of boards are subject to removal, at the discretion of the mewch team. These are a few things that increase the likelyhood of your board being removed:
       <ol id="golbalRulesUl">
