--- a/static/donate.html
+++ b/static/donate.html
@@ -43,7 +43,7 @@
     <fieldset id="staticPageFieldset">
       <legend>Help Mewch pay for server costs</legend>
       <ul id="golbalRulesUl">
-      	<p>We recieve a large amount of traffic every day and can easily make alot of money off of ads but choose not to for the sake of privacy risks and annoyances that ads may cause. Help keep us running smoothly by donating.</p>
+      	<p>We recieve a large amount of traffic every day to our servers. Help keep us running smoothly by donating.</p>
       	<p>Ways to donate:</p>
 	<li><a href="https://paypal.me/mewch">Paypal</a></li>
 	<li><a href="https://www.redbubble.com/people/mewch-net">Mewch Merch</a></li>
