--- a/static/donate.html
+++ b/static/donate.html
@@ -51,7 +51,7 @@
       </ul>
   <p>It costs mewch <b>$222</b> a year to run our Las Vegas servers, and ~<b>$30</b> for domain name renewals.</p>
   <p>How much we've raised for this year's costs:</p>
-      <p>$0 of $252 <progress value="0" max="100"></progress></p>
+      <p>$95 of $252 <progress value="37.698412698412696" max="100"></progress></p>
     </fieldset>
 </div>
 </body>
