Fixed some more default template css problems.

--- a/static/posting.html
+++ b/static/posting.html
@@ -80,7 +80,7 @@
       <p>Example:</p>
       <p>
         >>50 ->
-        <a href="">>>50</a>
+        <a href=""><u>>>50</u></a>
       </p>
 
       <br>
@@ -92,10 +92,10 @@
       <p>Example:</p>
       <p>
         >>>/cancer/ ->
-        <a
+        <u><a
           href=""
           class="quoteLink">>>>/cancer/</a>
-      </p>
+      </u></p>
 
       <br>
 
@@ -108,7 +108,7 @@
         >>>/cancer/50 ->
         <a
           href=""
-          class="quoteLink">>>>/cancer/50</a>
+          class="quoteLink"><u>>>>/cancer/50</u></a>
       </p>
 
       <br>
