--- a/static/faq.html
+++ b/static/faq.html
@@ -35,24 +35,20 @@
       alt="logo" />
   </header>
 
-  <div id="staticPageWrapper">
+  <div id="staticPageWrapper" width="600px">
     <fieldset id="staticPageFieldset">
-      <legend>Links</legend>
-      <p class="title">Here are some links to other sites that you may
-        enjoy.</p>
-       <ul>
-        <li><a href="irc://irc.rizon.net&channel=#gnu">IRC</a>, Our channel is #117chan, and it's hosted on the Rizon server.</li>
-        <li><a href="mumble://PLACEHOLDER/?version=X.X.X">Mumble</a>, the public Mumble voice server.</li>
-      </ul>
-      <hr>
-      <p>Source code of 117chan</p>
-      <ul>
-        <li><a href="https://gitgud.io/117chan/117chan">117Lynx</a>, the
-          repository for the front-end. <a href="/.static/faq.html">(MIT Public License)</a></li>
-        <li><a href="https://gitgud.io/LynxChan/LynxChan/">LynxChan</a>, the repository for the back-end. <a href="/.static/faq.html">(MIT Public License)</a></li>
-      </ul>
-     <a href="/.static/faq.html">What is the MIT Public License?</a>
-
+      <legend>Frequently Asked Questions</legend>
+      <p class="title">PlaceHolder</p>
+       <ol>
+        <li><i>What is 117chan?</i></li>
+117chan is an anonymous imageboard where users can on various boards ranging from a variety of topics. 117chan is targeted at males, incels, virgins, non-normies.
+        <li><i>What is the MIT Public License?</i></li>
+        To quote <a href="https://tldrlegal.com/license/mit-license">tl;drLegal</a>:
+        <blockquote cite="https://tldrlegal.com/license/mit-license">
+A short, permissive software license. Basically, you can do whatever you want as long as you include the original copyright and license notice in any copy of the software/source.  There are many variations of this license in use.
+        </blockquote>
+        If you want to read the full MIT Public License, click <a href="https://opensource.org/licenses/MIT">here</a>.
+      </ol>
     </fieldset>
   </div>
 </body>
