A bit of fixing on the overboard page, still need to correct the footer placement.

--- a/static/posting.html
+++ b/static/posting.html
@@ -17,16 +17,16 @@
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         id="navLinkHome"
-        class="coloredIcon">home</a> <span>/</span> <a
+        class="coloredIcon">Home</a> <span>/</span> <a
         href="/boards.js"
         id="navBoardList"
-        class="coloredIcon">boards</a> <span>/</span> <a
+        class="coloredIcon">Boards</a> <span>/</span> <a
         href="/overboard"
         id="navOverboard"
-        class="coloredIcon">overboard</a> <span>/</span> <a
+        class="coloredIcon">Overboard</a> <span>/</span> <a
         href="/.static/posting.html"
         id="navPosting"
-        class="coloredIcon">help</a> <span>]</span>
+        class="coloredIcon">Help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
