Added several banners, created a functional FAQ page, and began working on a better front page.

--- a/static/faq.html
+++ b/static/faq.html
@@ -35,21 +35,74 @@
       alt="logo" />
   </header>
 
-  <div id="staticPageWrapper" width="600px">
-    <fieldset id="staticPageFieldset">
-      <legend>Frequently Asked Questions</legend>
-      <p class="title">PlaceHolder</p>
-       <ol>
-        <li><i>What is 117chan?</i></li>
-117chan is an anonymous imageboard where users can on various boards ranging from a variety of topics. 117chan is targeted at males, incels, virgins, non-normies.
-        <li><i>What is the MIT Public License?</i></li>
-        To quote <a href="https://tldrlegal.com/license/mit-license">tl;drLegal</a>:
-        <blockquote cite="https://tldrlegal.com/license/mit-license">
-A short, permissive software license. Basically, you can do whatever you want as long as you include the original copyright and license notice in any copy of the software/source.  There are many variations of this license in use.
-        </blockquote>
-        If you want to read the full MIT Public License, click <a href="https://opensource.org/licenses/MIT">here</a>.
-      </ol>
-    </fieldset>
-  </div>
+<center>
+<h1>FAQ</h1>
+<p class="nonBoardSubText">Frequently Asked Questions</p>
+</center>
+
+<center>
+<div class = "tableOutside">
+<h2 class = "table_h2">Questions</h2>
+  <ol>
+    <li><a href = "#faq1">What is 117chan?</a></li>
+    <li><a href = "#faq2">How does 117chan work?</a></li>
+    <li><a href = "#faq3">What are global rules?</a></li>
+    <li><a href = "#faq4">How do I format text?</a></li>
+    <li><a href = "#faq5">What is Sage?</a></li>
+    <li><a href = "#faq6">What is a tripcode?</a></li>
+    <li><a href = "#faq7">How can I become a volunteer?</a></li>
+    <li><a href = "#faq8">How do I leave feedback or request features?</a></li>
+    <li><a href = "#faq9">How do I get in contact with an administrator?</a></li>
+  </ol>
+
+<h2 class = "table_h2"><a id="faq1"></a>What is 117Chan?</h2>
+<p><b>117chan</b> is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan.</p> 
+
+<ol type="I">
+<li><b>Virgin:</b> a person who, in his entire life, has never engaged in intimate acts of vaginal sex, oral sex, anal sex, mutual masturbation, or other forms of non-penetrative sex, with another person</li>
+<li><b>Normie:</b> a person who does not have a mental illness such as bipolar disorder, schizophrenia, mood disorders, PTSD, depression or any similar mental disability. "Normie" is a reference to those who are a part of the mainstream culture; the 97% of the population who do not have a mental illness.</li>
+<li><b>Social Outcast:</b> someone who is rejected from the majority, or all of the social groups in an area.</li>
+</ol>
+
+<p>If you are not one or more of these things then your probably don't belong here, click <a href="https://www.reddit.com/">here</a> to be redirected to a more fitting place. <b>Please be advised, succubi (or women) are not allowed on this website</b>.</p>
+
+<h2 class = "table_h2"><a id="faq2"></a>How does 117chan work?</h2>
+<p>117chan is running off of the <a href="https://gitgud.io/LynxChan/LynxChan">LynxChan backend</a>, and the <a href="https://gitgud.io/117chan/117Lynx">117chan fron-end</a>, a fork of <a href="https://gitgud.io/LynxChan/PenumbraLynx">PenumbraLynx</a>. All of the software used to create this website is libre, and respects your privacy/freedom. Analytics are gathered using a tool called <a href="https://github.com/matomo-org/matomo">Matomo</a> (formarly known as Piwik).</p>
+<p>Full IP addresses are not logged, only the first two segments are, in order to prevent spamming. We do not use Google's captcha system, nor do we use any Google integrations. For more information on how 117chan operates visit the <a href="/.static/about.html">about page</a>.
+
+<h2 class = "table_h2"><a id="faq3"></a>What are global rules?</h2>
+<p>Global rules are rules that apply to every board. That being said, many boards have their own independent ruleset usually viewable on the boards first sticky thread.</p>
+<p>Click <a href="/.static/globalRules.html">here</a> to be redirected to the list of global rules.</p>
+<p><b>Please note that ban durations will vary based on the severity and context of the rule being broken.</b></p>
+
+<h2 class = "table_h2"><a id="faq4"></a>How do I format text?</h2>
+<p>All of the information regarding text formatting can be found on the <a href="/.static/posting.html">Help</a> page.</p>
+
+<h2 class = "table_h2"><a id="faq5"></a>What is <i>Sage</i>?</h2>
+<p>Typing "sage" into the email field when replying to a post will generate a reply without bumping the thread.</p>
+
+<h2 class = "table_h2"><a id="faq6"></a>What is a tripcode?</h2>
+<p>By default posts are made anonymously on 117chan. However you may use the "name" field to establish an identity.</p>
+<p>For more information on how to use tripcodes, go to the <a href="/.static/posting.html">Help</a> page.</p>
+<p><b>Please note that any poster can use the same name/tripcode. If you see someone that you suspect is impersonating a moderator please report the poster.</b></p> 
+
+<h2 class = "table_h2"><a id="faq7"></a>How can I become a volunteer?</h2>
+<p>Typically if volunteers are needed a global announcement will be sent out. The necessity for volunteers may vary from being a board janitor, a 117chan developer, IRC/Mumble moderator etc.</p>
+
+<h2 class = "table_h2"><a id="faq8"></a>How do I leave feedback or request features?</h2>
+<p>To report a bug, leave feedback or request features you can reply to the <a href="/meta/">General Improvement Thread</a> on /meta/ or start a new thread on /meta/.</p>
+
+<h2 class = "table_h2"><a id="faq9"></a>How do I get in contact with an administrator?</h2>
+<p>Please send an email to admin@117chan.org [admin (at) 117chan.org].</p>
+
+</div>
+</center>
+
+<hr>
+<footer>
+<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<br />
+Copyright © 2018 117chan Development Team.
+</footer>
 </body>
 </html>
