Worked on several other pages and fixed some bugs.

--- a/static/contact.html
+++ b/static/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Contact</title>
+<title>Links</title>
 <meta charset="UTF-8" />
 <meta
   name="viewport"
@@ -16,16 +16,16 @@
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         id="navLinkHome"
-        class="coloredIcon">home</a> <span>/</span> <a
+        class="coloredIcon">Home</a> <span>/</span> <a
         href="/boards.js"
         id="navBoardList"
-        class="coloredIcon">boards</a> <span>/</span> <a
+        class="coloredIcon">Boards</a> <span>/</span> <a
         href="/overboard"
         id="navOverboard"
-        class="coloredIcon">overboard</a> <span>/</span> <a
+        class="coloredIcon">Overboard</a> <span>/</span> <a
         href="/.static/posting.html"
         id="navPosting"
-        class="coloredIcon">help</a> <span>]</span>
+        class="coloredIcon">Help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
@@ -35,11 +35,39 @@
       alt="logo" />
   </header>
 
-  <div id="staticPageWrapper">
-    <fieldset id="staticPageFieldset">
-      <legend>Contact</legend>
-      <p>Your contact</p>
-    </fieldset>
-  </div>
+<center>
+<h1>Contact</h1>
+<p class="nonBoardSubText">General Questions, Suggestions, and DMCA Takedowns</p>
+</center>
+
+<center>
+<div class = "tableOutside">
+<h2 class = "table_h2">General Questions and Suggestions</h2>
+<p>Email: admin@117chan.org   [admin (at) 117.org]</p>
+<p>If you want an answer from a non-administrator you can also, post a reply to the <a href="/meta/">General Improvement Thread</a> on /meta/ or start a new thread on /meta/.</p>
+</div>
+
+<div class = "tableOutside">
+<a id="legal"></a><h2 class = "table_h2">DMCA Takedowns</h2>
+<p>If you are a copyright holder of an image/video/file and would like it removed send a <b>PROPERLY-FORMATED</b> DMCA Takedown Notice to legal@117chan.org   [legal (at) 117chan.org].</p>
+<p>For legal reasons, DMCA Takedown Notices <b>MUST</b> include the following:</p>
+<ol style="1">
+<li>Name or Company Name</li>
+<li>Address</li>
+<li>Daytime telephone</li>
+<li>Email address</li>
+<li>Name or title of Work(s) to be removed</li>
+<li>URLs of offending files or posts</li>
+</ol>
+<p>In addition, please note that all DMCA take downs are publically logged and availble to users of the site for transparency purposes. If you are a user and would like to view previous DMCA takedowns click <a href="/logs.js">here</a>.</p>
+</div>
+</center>
+
+<hr>
+<footer>
+<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<br />
+Copyright © 2018 117chan Development Team.
+</footer>
 </body>
 </html>
