--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Global Rules</title>
-<meta charset="UTF-8">
+<title>Links</title>
+<meta charset="UTF-8" />
 <meta
   name="viewport"
   content="width=device-width, initial-scale=1.0">
 <link
-  rel="stylesheet"
+  href="/.static/css/global.css"
   type="text/css"
-  href="/.static/css/global.css">
+  rel="stylesheet" />
 </head>
 <body>
   <nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         id="navLinkHome"
-        class="coloredIcon">home</a> <span>/</span> <a
+        class="coloredIcon">Home</a> <span>/</span> <a
         href="/boards.js"
         id="navBoardList"
-        class="coloredIcon">boards</a> <span>/</span> <a
+        class="coloredIcon">Boards</a> <span>/</span> <a
         href="/overboard"
         id="navOverboard"
-        class="coloredIcon">overboard</a> <span>/</span> <a
+        class="coloredIcon">Overboard</a> <span>/</span> <a
         href="/.static/posting.html"
         id="navPosting"
-        class="coloredIcon">help</a> <span>]</span>
+        class="coloredIcon">Help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
@@ -35,14 +35,26 @@
       alt="logo" />
   </header>
 
-  <div id="staticPageWrapper">
-    <fieldset id="staticPageFieldset">
-      <legend>Global Rules</legend>
-      <p>Title goes here</p>
-      <ul id="golbalRulesUl">
+<center>
+<h1>Global Rules</h1>
+<p class="nonBoardSubText">Follow these rules or get banned</p>
+</center>
+
+<center>
+<div class = "tableOutside">
+<h2 class = "table_h2">Global Rules</h2>
+      <ol id="golbalRulesUl" style="1">
         <li>Insert rules here.</li>
-      </ul>
-    </fieldset>
-  </div>
+      </ol>
+</div>
+</center>
+
+<hr>
+<footer>
+<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<br />
+Copyright © 2018 117chan Development Team.
+</footer>
 </body>
 </html>
+
