--- a/static/faq.html
+++ b/static/faq.html
@@ -55,7 +55,7 @@
     <li><a href = "#faq9">How do I get in contact with an administrator?</a></li>
   </ol>
 
-<h2 class = "table_h2"><a id="faq1"></a>What is 117Chan?</h2>
+<a id="faq1"></a><h2 class = "table_h2">What is 117Chan?</h2>
 <p><b>117chan</b> is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan.</p> 
 
 <ol type="I">
@@ -66,41 +66,41 @@
 
 <p>If you are not one or more of these things then your probably don't belong here, click <a href="https://www.reddit.com/">here</a> to be redirected to a more fitting place. <b>Please be advised, succubi (or women) are not allowed on this website</b>.</p>
 
-<h2 class = "table_h2"><a id="faq2"></a>How does 117chan work?</h2>
+<a id="faq2"></a><h2 class = "table_h2">How does 117chan work?</h2>
 <p>117chan is running off of the <a href="https://gitgud.io/LynxChan/LynxChan">LynxChan backend</a>, and the <a href="https://gitgud.io/117chan/117Lynx">117chan fron-end</a>, a fork of <a href="https://gitgud.io/LynxChan/PenumbraLynx">PenumbraLynx</a>. All of the software used to create this website is libre, and respects your privacy/freedom. Analytics are gathered using a tool called <a href="https://github.com/matomo-org/matomo">Matomo</a> (formarly known as Piwik).</p>
 <p>Full IP addresses are not logged, only the first two segments are, in order to prevent spamming. We do not use Google's captcha system, nor do we use any Google integrations. For more information on how 117chan operates visit the <a href="/.static/about.html">about page</a>.
 
-<h2 class = "table_h2"><a id="faq3"></a>What are global rules?</h2>
+<a id="faq3"></a><h2 class = "table_h2">What are global rules?</h2>
 <p>Global rules are rules that apply to every board. That being said, many boards have their own independent ruleset usually viewable on the boards first sticky thread.</p>
 <p>Click <a href="/.static/globalRules.html">here</a> to be redirected to the list of global rules.</p>
 <p><b>Please note that ban durations will vary based on the severity and context of the rule being broken.</b></p>
 
-<h2 class = "table_h2"><a id="faq4"></a>How do I format text?</h2>
+<a id="faq4"></a><h2 class = "table_h2">How do I format text?</h2>
 <p>All of the information regarding text formatting can be found on the <a href="/.static/posting.html">Help</a> page.</p>
 
-<h2 class = "table_h2"><a id="faq5"></a>What is <i>Sage</i>?</h2>
+<a id="faq5"></a><h2 class = "table_h2">What is <i>Sage</i>?</h2>
 <p>Typing "sage" into the email field when replying to a post will generate a reply without bumping the thread.</p>
 
-<h2 class = "table_h2"><a id="faq6"></a>What is a tripcode?</h2>
+<a id="faq6"></a><h2 class = "table_h2">What is a tripcode?</h2>
 <p>By default posts are made anonymously on 117chan. However you may use the "name" field to establish an identity.</p>
 <p>For more information on how to use tripcodes, go to the <a href="/.static/posting.html">Help</a> page.</p>
 <p><b>Please note that any poster can use the same name/tripcode. If you see someone that you suspect is impersonating a moderator please report the poster.</b></p> 
 
-<h2 class = "table_h2"><a id="faq7"></a>How can I become a volunteer?</h2>
+<a id="faq7"></a><h2 class = "table_h2">How can I become a volunteer?</h2>
 <p>Typically if volunteers are needed a global announcement will be sent out. The necessity for volunteers may vary from being a board janitor, a 117chan developer, IRC/Mumble moderator etc.</p>
 
-<h2 class = "table_h2"><a id="faq8"></a>How do I leave feedback or request features?</h2>
+<a id="faq8"></a><h2 class = "table_h2">How do I leave feedback or request features?</h2>
 <p>To report a bug, leave feedback or request features you can reply to the <a href="/meta/">General Improvement Thread</a> on /meta/ or start a new thread on /meta/.</p>
 
-<h2 class = "table_h2"><a id="faq9"></a>How do I get in contact with an administrator?</h2>
-<p>Please send an email to admin@117chan.org [admin (at) 117chan.org].</p>
+<a id="faq9"></a><h2 class = "table_h2">How do I get in contact with an administrator?</h2>
+<p>Please send an email to admin@117chan.org   [admin (at) 117chan.org].</p>
 
 </div>
 </center>
 
 <hr>
 <footer>
-<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
 <br />
 Copyright © 2018 117chan Development Team.
 </footer>
