Fixed several bugs, and updated various pages.

--- a/static/faq.html
+++ b/static/faq.html
@@ -1,7 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Links</title>
+<meta charset="UTF-8" />
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1.0">
+<link
+  href="/.static/css/global.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/posting.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/thread.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/board.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/boardContent.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/watcher.css"
+  type="text/css"
+  rel="stylesheet" />
+
+<title>FAQ</title>
 <meta charset="UTF-8" />
 <meta
   name="viewport"
@@ -14,18 +43,15 @@
 <body>
   <nav>
     <span id="navLinkSpan"> <span>[</span> <a
-        href="/"
-        id="navLinkHome"
-        class="coloredIcon">Home</a> <span>/</span> <a
         href="/boards.js"
-        id="navBoardList"
-        class="coloredIcon">Boards</a> <span>/</span> <a
+        class="coloredIcon"
+        id="navBoardList">Boards</a> <span>/</span> <a
         href="/overboard"
-        id="navOverboard"
-        class="coloredIcon">Overboard</a> <span>/</span> <a
-        href="/.static/posting.html"
-        id="navPosting"
-        class="coloredIcon">Help</a> <span>]</span>
+        class="coloredIcon"
+        id="navOverboard">Overboard</a> <span>/</span> <a
+        href="/.static/faq.html"
+        class="coloredIcon"
+        id="navPosting">FAQ</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
@@ -45,18 +71,20 @@
 <h2 class = "table_h2">Questions</h2>
   <ol>
     <li><a href = "#faq1">What is 117chan?</a></li>
-    <li><a href = "#faq2">How does 117chan work?</a></li>
-    <li><a href = "#faq3">What are global rules?</a></li>
-    <li><a href = "#faq4">How do I format text?</a></li>
-    <li><a href = "#faq5">What is Sage?</a></li>
-    <li><a href = "#faq6">What is a tripcode?</a></li>
-    <li><a href = "#faq7">How can I become a volunteer?</a></li>
-    <li><a href = "#faq8">How do I leave feedback or request features?</a></li>
-    <li><a href = "#faq9">How do I get in contact with an administrator?</a></li>
+    <li><a href = "#faq1">Who owns 117chan?</a></li>
+    <li><a href = "#faq3">How does 117chan work?</a></li>
+    <li><a href = "#faq4">What are global rules?</a></li>
+    <li><a href = "#faq5">How do I format text?</a></li>
+    <li><a href = "#faq6">What is Sage?</a></li>
+    <li><a href = "#faq7">What is a tripcode?</a></li>
+    <li><a href = "#faq7">What is a role signature?</a></li>
+    <li><a href = "#faq8">How can I become a volunteer?</a></li>
+    <li><a href = "#faq9">How do I leave feedback or request features?</a></li>
+    <li><a href = "#faq10">How do I get in contact with an administrator?</a></li>
   </ol>
 
 <a id="faq1"></a><h2 class = "table_h2">What is 117Chan?</h2>
-<p><b>117chan</b> is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan.</p> 
+<p><b>117chan</b> (also known as <b>Incelchan</b>, or <b>RobotChan</b>) is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan.</p>
 
 <ol type="I">
 <li><b>Virgin:</b> a person who, in his entire life, has never engaged in intimate acts of vaginal sex, oral sex, anal sex, mutual masturbation, or other forms of non-penetrative sex, with another person</li>
@@ -66,33 +94,120 @@
 
 <p>If you are not one or more of these things then your probably don't belong here, click <a href="https://www.reddit.com/">here</a> to be redirected to a more fitting place. <b>Please be advised, succubi (or women) are not allowed on this website</b>.</p>
 
-<a id="faq2"></a><h2 class = "table_h2">How does 117chan work?</h2>
+<a id="faq2"></a><h2 class = "table_h2">Who owns 117chan?</h2>
+<p>117chan is owned by <b>null</b> (also known as <b>Anthony Soytano</b>).</p>
+
+<a id="faq3"></a><h2 class = "table_h2">How does 117chan work?</h2>
 <p>117chan is running off of the <a href="https://gitgud.io/LynxChan/LynxChan">LynxChan backend</a>, and the <a href="https://gitgud.io/117chan/117Lynx">117chan fron-end</a>, a fork of <a href="https://gitgud.io/LynxChan/PenumbraLynx">PenumbraLynx</a>. All of the software used to create this website is libre, and respects your privacy/freedom. Analytics are gathered using a tool called <a href="https://github.com/matomo-org/matomo">Matomo</a> (formarly known as Piwik).</p>
 <p>Full IP addresses are not logged, only the first two segments are, in order to prevent spamming. We do not use Google's captcha system, nor do we use any Google integrations. For more information on how 117chan operates visit the <a href="/.static/about.html">about page</a>.
 
-<a id="faq3"></a><h2 class = "table_h2">What are global rules?</h2>
+<a id="faq4"></a><h2 class = "table_h2">What are global rules?</h2>
 <p>Global rules are rules that apply to every board. That being said, many boards have their own independent ruleset usually viewable on the boards first sticky thread.</p>
 <p>Click <a href="/.static/globalRules.html">here</a> to be redirected to the list of global rules.</p>
 <p><b>Please note that ban durations will vary based on the severity and context of the rule being broken.</b></p>
 
-<a id="faq4"></a><h2 class = "table_h2">How do I format text?</h2>
-<p>All of the information regarding text formatting can be found on the <a href="/.static/posting.html">Help</a> page.</p>
+<a id="faq5"></a><h2 class = "table_h2">How do I format text?</h2>
+      <h2 class = "inner_h2">Tags</h2>
+<ol style="list-style-type:none;">
+        <li>[spoiler]the game[/spoiler] -> <span class="spoiler">the game</span></li>
+        <li>**this also works** -> <span class="spoiler">this also works</span></li>
+        <li>==SRZ BIZNIZ== -> <span class="redText">SRZ BIZNIZ</span></li>
+        <li>''italics'' -> <em>italics</em></li>
+        <li>'''bold''' -> <strong>bold</strong></li>
+        <li>__underline__ -> <u>underline</u></li>
+        <li>~~strikethrough~~ -> <s>strikethrough</s></li>
+        <li>[aa] for japanese characters</li>
+        <li>[code] tags if enabled by board owner</p></li>
+</ol>
 
-<a id="faq5"></a><h2 class = "table_h2">What is <i>Sage</i>?</h2>
+
+<hr>
+
+      <h2 class = "inner_h2">Quote</h2>
+      <p>If you write >> and then a number to a posting, it will create a
+        link to this post in the board you are posting and add a tooltip with
+        the post preview if you have javascript enabled.</p>
+      <u><p>Example:</p></u>
+<ol style="list-style-type:none;">
+        </li>>>50 ->
+        <a href="">>>50</a></li>
+      </ol>
+
+<hr>
+
+      <h2 class = "inner_h2">Board link</h2>
+      <p>If you write >>> and then add a board name between slashes, it will
+        create a link to the board.</p>
+      <u><p>Example:</p></u>
+<ol style="list-style-type:none;">
+        <li>>>>/cancer/ ->
+        <a
+          href=""
+          class="quoteLink">>>>/cancer/</a></li>
+</ol>
+
+<hr>
+
+      <h2 class = "inner_h2">Cross-quote</h2>
+      <p>It is also possible to quote posts from another boards. Just add
+        the posting number after the board name.</p>
+
+      <u><p>Example:</p></u>
+<ol style="list-style-type:none;">
+        <li>>>>/cancer/50 ->
+        <a
+          href=""
+          class="quoteLink">>>>/cancer/50</a></li>
+</ol>
+
+<hr>
+
+      <h2 class = "inner_h2">Greentext</h2>
+      <p>If you add a > in the start of a line, it will greentext the text
+        until it finds a new line.</p>
+      <u><p>Example:</p></u>      
+<ol style="list-style-type:none;">
+        <li>>le ebin upboat :^) -> <span class="greenText">>le ebin upboat
+          :^)</span></li>
+</ol>
+<hr>
+
+      <h2 class = "inner_h2">Urls</h2>
+      <p>If you post a url starting with either http or https, it will
+        automatically be linked.</p>
+
+      <u><p>Example:</p></u>
+<ol style="list-style-type:none;"><li>
+        http://bot.net ->
+        <a href="">http://bot.net</li>
+</ol>
+
+
+
+<a id="faq6"></a><h2 class = "table_h2">What is <i>Sage</i>?</h2>
 <p>Typing "sage" into the email field when replying to a post will generate a reply without bumping the thread.</p>
 
-<a id="faq6"></a><h2 class = "table_h2">What is a tripcode?</h2>
+<a id="faq7"></a><h2 class = "table_h2">What is a tripcode?</h2>
 <p>By default posts are made anonymously on 117chan. However you may use the "name" field to establish an identity.</p>
-<p>For more information on how to use tripcodes, go to the <a href="/.static/posting.html">Help</a> page.</p>
-<p><b>Please note that any poster can use the same name/tripcode. If you see someone that you suspect is impersonating a moderator please report the poster.</b></p> 
 
-<a id="faq7"></a><h2 class = "table_h2">How can I become a volunteer?</h2>
+<ol style="I">
+<li>To use a tripcode, add a # in your name. After the #, add the password for the tripcode.</li>
+<li>The server will apply a hash to the password and display the hashed password.</li>
+<li>To use a secure tripcode, add ## in your name and a password. A secure tripcode will generate a random text to be displayed that will only be used if your password matches.</li> 
+</ol>
+
+<a id="faq7"></a><h2 class = "table_h2">What is a role signature?</h2>
+<p>If you wish to display your global or board role when posting, you can put #rs in your name, like a tripcode, case insensitive. This will prevent you from using a tripcode.
+
+You can also enable an always use role signature rule in your account settings.</p>
+
+<a id="faq9"></a><h2 class = "table_h2">How can I become a volunteer?</h2>
 <p>Typically if volunteers are needed a global announcement will be sent out. The necessity for volunteers may vary from being a board janitor, a 117chan developer, IRC/Mumble moderator etc.</p>
 
-<a id="faq8"></a><h2 class = "table_h2">How do I leave feedback or request features?</h2>
+<a id="faq10"></a><h2 class = "table_h2">How do I leave feedback or request features?</h2>
 <p>To report a bug, leave feedback or request features you can reply to the <a href="/meta/">General Improvement Thread</a> on /meta/ or start a new thread on /meta/.</p>
 
-<a id="faq9"></a><h2 class = "table_h2">How do I get in contact with an administrator?</h2>
+<a id="faq11"></a><h2 class = "table_h2">How do I get in contact with an administrator?</h2>
 <p>Please send an email to admin@117chan.org   [admin (at) 117chan.org].</p>
 
 </div>
@@ -105,4 +220,12 @@
 Copyright © 2018 117chan Development Team.
 </footer>
 </body>
+
+<script src="/.static/js/settings.js"></script>
+<script src="/.static/js/api.js"></script>
+<script src="/.static/js/themes.js"></script>
+<script src="/.static/js/draggable.js"></script>
+<script src="/.static/js/watcher.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
+
 </html>
