--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Links</title>
+<meta charset="UTF-8" />
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1.0">
+<link
+  href="/.static/css/global.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/index.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/watcher.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/posting.css"
+  type="text/css"
+  rel="stylesheet" />
+
+
+<title>Global Rules</title>
 <meta charset="UTF-8" />
 <meta
   name="viewport"
@@ -56,5 +78,13 @@
 Copyright © 2018 117chan Development Team.
 </footer>
 </body>
+
+<script src="/.static/js/settings.js"></script>
+<script src="/.static/js/api.js"></script>
+<script src="/.static/js/themes.js"></script>
+<script src="/.static/js/draggable.js"></script>
+<script src="/.static/js/watcher.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
+
 </html>
 
